:ok_hand: [#3620] PR feedback

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     ],
     "transformIgnorePatterns": [
       "/node_modules/(?!@open-formulieren/formio-builder)/",
-      "\\.pnp\\.[^\\/]+$"
+      "\\.pnp\\.[^\\\/]+$"
     ]
   },
   "browserslist": [
