--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -336,6 +336,10 @@ jobs:
       - docker_build
 
     steps:
+      # So the scanner gets commit meta-information
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Derive version
         id: vars
         run: |
@@ -355,7 +359,7 @@ jobs:
       - name: Scan image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.IMAGE_NAME }}:all-extensions-${{ steps.vars.outputs.version }}
+          input: /github/workspace/image.tar  # from download-artifact
           format: 'sarif'
           output: 'trivy-results-docker.sarif'
           ignore-unfixed: true
