--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     ],
     "transformIgnorePatterns": [
       "/node_modules/(?!@open-formulieren/formio-builder)/",
-      "\\.pnp\\.[^\\\/]+$"
+      "\\.pnp\\.[^\\/]+$"
     ]
   },
   "browserslist": [
@@ -79,7 +79,6 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.13.13",
     "@formatjs/cli": "^6.1.1",
