:heavy_plus_sign: Add @open-formulieren/leaflet-tools to replace own code
It's the same code, except now centralized in a library instead of
copy pasting it all the time.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@open-formulieren/design-tokens": "^0.51.0",
     "@open-formulieren/formio-builder": "^0.9.0",
+    "@open-formulieren/leaflet-tools": "^1.0.0",
     "@rjsf/core": "^4.2.1",
     "@tinymce/tinymce-react": "^3.12.6",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
@@ -46,7 +47,6 @@
     "leaflet": "^1.7.1",
     "microscope-sass": "^2.0.0",
     "paper-css": "^0.4.1",
-    "proj4leaflet": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
