--- a/src/openforms/contrib/brk/tests/files/vcr_cassettes/BRKCadastralClientTests/BRKCadastralClientTests.test_client_404.yaml
+++ b/src/openforms/contrib/brk/tests/files/vcr_cassettes/BRKCadastralClientTests/BRKCadastralClientTests.test_client_404.yaml
@@ -5,30 +5,38 @@ interactions:
       Accept:
       - application/hal+json
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       Content-Type:
       - application/hal+json
       User-Agent:
       - python-requests/2.31.0
-      apikey:
-      - l7xx1f2691f2520d487b902f4e0b57a0b197
+      X-Api-Key:
+      - fake
     method: GET
-    uri: http://localhost:8150/kadastraalonroerendezaken?postcode=dummy&huisnummer=dummy
+    uri: https://api.brk.kadaster.nl/esd-eto-apikey/bevragen/v2/kadastraalonroerendezaken?postcode=1234AB&huisnummer=1
   response:
     body:
-      string: '{"detail":"Not Found"}'
+      string: '{"_links":{"self":{"href":"/kadastraalonroerendezaken?postcode=1234AB&huisnummer=1"}},"_embedded":{}}'
     headers:
-      content-length:
-      - '22'
-      content-type:
-      - application/json
-      date:
-      - Tue, 05 Dec 2023 16:09:34 GMT
-      server:
-      - uvicorn
+      Api-Version:
+      - 2.0.0
+      Connection:
+      - keep-alive
+      Content-Encoding:
+      - gzip
+      Content-Length:
+      - '113'
+      Content-Type:
+      - application/hal+json
+      Date:
+      - Fri, 15 Dec 2023 16:34:14 GMT
+      Keep-Alive:
+      - timeout=60
+      Server:
+      - Unspecified
     status:
-      code: 404
-      message: Not Found
+      code: 200
+      message: ''
 version: 1
