Update `flake8` exclusion list

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,10 @@ exclude=
     migrations
     static
     media
+    node_modules
     src/openforms/conf/local_example.py
+    # Might be created by developers:
+    src/openforms/conf/local.py
 
 [isort]
 combine_as_imports = true
