--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@open-formulieren/design-tokens": "^0.51.0",
-    "@open-formulieren/formio-builder": "^0.9.0",
+    "@open-formulieren/formio-builder": "^0.11.1",
     "@open-formulieren/leaflet-tools": "^1.0.0",
     "@rjsf/core": "^4.2.1",
     "@tinymce/tinymce-react": "^4.3.2",
@@ -96,6 +96,7 @@
     "babel-plugin-formatjs": "^10.5.1",
     "browserslist": "^4.21.5",
     "copy-webpack-plugin": "^6.4.1",
+    "css-has-pseudo": "^6.0.1",
     "css-loader": "^5.0.2",
     "cssnano": "^5.0.17",
     "ejs-loader": "^0.5.0",
