:heavy_plus_sign: [#3049] Add django-json-form
As a replacement for jango-better-admin-arrayfield

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -50,6 +50,7 @@ django-cors-headers
 django-decorator-include
 django-digid-eherkenning
 django-hijack
+django-jsonform
 django-log-outgoing-requests
 django-modeltranslation
 django-ordered-model
