🔧 Add some global coverage excludes

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,3 +53,9 @@ omit =
 
 [coverage:report]
 skip_covered = True
+exclude_also =
+    if (typing\.)?TYPE_CHECKING:
+    @(typing\.)?overload
+    class .*\(.*Protocol.*\):
+    @(abc\.)?abstractmethod
+    raise NotImplementedError
