--- a/docker/ci/config.json
+++ b/docker/ci/config.json
@@ -6,6 +6,11 @@
             "hasExtensionsVariant": true
         },
         {
+            "gitRef": "stable/2.5.x",
+            "tag": null,
+            "hasExtensionsVariant": true
+        },
+        {
             "gitRef": "stable/2.4.x",
             "tag": null,
             "hasExtensionsVariant": true
