:heavy_plus_sign: [#3049] Replace two-factor fork with maykin-2fa
Also addresses part of #3695

* Drop the maykin-django-two-factor-auth dependency - it is replaced
  with the upstream package through maykin-2fa
* Drop phonenumbers, instead phonenumberslite is enforced by maykin-2fa

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -15,7 +15,6 @@ html5lib
 --no-binary lxml
 lxml
 O365  # microsoft graph
-phonenumbers
 Pillow  # handle images
 portalocker[redis]
 psycopg2  # database driver
@@ -62,7 +61,7 @@ django-tinymce
 django-treebeard
 django-yubin
 mozilla-django-oidc-db
-maykin-django-two-factor-auth[phonenumbers]
+maykin-2fa
 django-timeline-logger
 django-csp
 django-csp-reports
