--- a/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKProfilesClientTests/KVKProfilesClientTests.test_client.yaml
+++ b/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKProfilesClientTests/KVKProfilesClientTests.test_client.yaml
@@ -5,7 +5,7 @@ interactions:
       Accept:
       - application/hal+json
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       Content-Type:
@@ -38,7 +38,7 @@ interactions:
       Content-Type:
       - application/hal+json
       Date:
-      - Wed, 04 Oct 2023 09:57:14 GMT
+      - Wed, 14 Feb 2024 13:38:15 GMT
       Keep-Alive:
       - timeout=60
       Server:
