--- a/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKProfilesClientTests/KVKProfilesClientTests.test_client_vve.yaml
+++ b/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKProfilesClientTests/KVKProfilesClientTests.test_client_vve.yaml
@@ -5,7 +5,7 @@ interactions:
       Accept:
       - application/hal+json
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       Content-Type:
@@ -35,7 +35,7 @@ interactions:
       Content-Type:
       - application/hal+json
       Date:
-      - Wed, 04 Oct 2023 09:57:15 GMT
+      - Wed, 14 Feb 2024 13:38:16 GMT
       Keep-Alive:
       - timeout=60
       Server:
