--- a/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKSearchClientTests/KVKSearchClientTests.test_client.yaml
+++ b/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKSearchClientTests/KVKSearchClientTests.test_client.yaml
@@ -5,7 +5,7 @@ interactions:
       Accept:
       - application/hal+json
       Accept-Encoding:
-      - gzip, deflate
+      - gzip, deflate, br
       Connection:
       - keep-alive
       Content-Type:
@@ -15,25 +15,26 @@ interactions:
       apikey:
       - l7xx1f2691f2520d487b902f4e0b57a0b197
     method: GET
-    uri: https://api.kvk.nl/test/api/v1/zoeken?kvkNummer=69599084
+    uri: https://api.kvk.nl/test/api/v2/zoeken?kvkNummer=69599084
   response:
     body:
-      string: '{"pagina":1,"aantal":10,"totaal":2,"resultaten":[{"kvkNummer":"69599084","vestigingsnummer":"000038509504","handelsnaam":"Test
-        EMZ Dagobert","adresType":"bezoekadres","straatnaam":"Abebe Bikilalaan","plaats":"Amsterdam","type":"hoofdvestiging","_links":{"basisprofiel":{"href":"https://api.kvk.nl/test/api/v1/basisprofielen/69599084"},"vestigingsprofiel":{"href":"https://api.kvk.nl/test/api/v1/vestigingsprofielen/000038509504"}}},{"kvkNummer":"69599084","vestigingsnummer":"000038509520","handelsnaam":"Test
-        EMZ Nevenvestiging Govert","adresType":"bezoekadres","straatnaam":"Geneinde","plaats":"Maastricht","type":"nevenvestiging","_links":{"basisprofiel":{"href":"https://api.kvk.nl/test/api/v1/basisprofielen/69599084"},"vestigingsprofiel":{"href":"https://api.kvk.nl/test/api/v1/vestigingsprofielen/000038509520"}}}]}'
+      string: '{"pagina":1,"resultatenPerPagina":10,"totaal":2,"resultaten":[{"kvkNummer":"69599084","vestigingsnummer":"000038509504","naam":"Test
+        EMZ Dagobert","adres":{"binnenlandsAdres":{"type":"bezoekadres","straatnaam":"Abebe
+        Bikilalaan","plaats":"Amsterdam"}},"type":"hoofdvestiging","_links":{"basisprofiel":{"href":"https://api.kvk.nl/test/api/v1/basisprofielen/69599084"},"vestigingsprofiel":{"href":"https://api.kvk.nl/test/api/v1/vestigingsprofielen/000038509504"}}},{"kvkNummer":"69599084","vestigingsnummer":"000038509520","naam":"Test
+        EMZ Nevenvestiging Govert","adres":{"binnenlandsAdres":{"type":"bezoekadres","straatnaam":"Geneinde","plaats":"Maastricht"}},"type":"nevenvestiging","_links":{"basisprofiel":{"href":"https://api.kvk.nl/test/api/v1/basisprofielen/69599084"},"vestigingsprofiel":{"href":"https://api.kvk.nl/test/api/v1/vestigingsprofielen/000038509520"}}}],"_links":{"self":{"href":"https://api.kvk.nl/test/api/v2/zoeken?kvknummer=69599084&pagina=1&resultatenperpagina=10"}}}'
     headers:
       API-Version:
-      - 1.4.1
+      - 2.0.0
       Connection:
       - keep-alive
       Content-Encoding:
       - gzip
       Content-Length:
-      - '310'
+      - '357'
       Content-Type:
       - application/hal+json
       Date:
-      - Wed, 04 Oct 2023 09:57:15 GMT
+      - Wed, 14 Feb 2024 13:38:17 GMT
       Keep-Alive:
       - timeout=60
       Server:
