:loud_sound: Don't swallow API errors
Presumably the session race condition fix introduced another issue that's affecting test isolation, but the errors are being swallowed by the generic exception handler making debugging this impossible.

This results in errors not being swallowed, and instead will result in a real crash/exception.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
           SECRET_KEY: dummy
           DB_USER: postgres
           DB_PASSWORD: ''
+          DEBUG: 'true'
 
       - name: Run JS tests
         run: npm test
@@ -175,6 +176,7 @@ jobs:
           SECRET_KEY: dummy
           DB_USER: postgres
           DB_PASSWORD: ''
+          DEBUG: 'true'
 
   e2etests:
     runs-on: ubuntu-latest
