--- a/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKProfilesClientTests/KVKProfilesClientTests.test_client.yaml
+++ b/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKProfilesClientTests/KVKProfilesClientTests.test_client.yaml
@@ -29,20 +29,32 @@ interactions:
     headers:
       API-Version:
       - 1.4.1
+      Cache-Control:
+      - no-cache, no-store, max-age=0, must-revalidate
       Connection:
       - keep-alive
       Content-Encoding:
       - gzip
       Content-Length:
       - '683'
+      Content-Security-Policy:
+      - frame-ancestors 'none', default-src 'none'
       Content-Type:
       - application/hal+json
       Date:
-      - Wed, 14 Feb 2024 13:38:15 GMT
+      - Thu, 21 Mar 2024 14:00:30 GMT
+      Feature-Policy:
+      - '''none'''
       Keep-Alive:
       - timeout=60
+      Referrer-Policy:
+      - no-referrer
       Server:
       - unknown
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
       strict-transport-security:
       - max-age=157680000 ; includeSubDomains
     status:
