--- a/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKSearchClientTests/KVKSearchClientTests.test_client_404.yaml
+++ b/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KVKSearchClientTests/KVKSearchClientTests.test_client_404.yaml
@@ -21,20 +21,32 @@ interactions:
       string: '{"fout":[{"code":"IPD5200","omschrijving":"Er zijn geen gegevens gevonden
         die voldoen aan de opgegeven zoekparameters."}]}'
     headers:
+      Cache-Control:
+      - no-store
       Connection:
       - keep-alive
       Content-Encoding:
       - gzip
       Content-Length:
       - '127'
+      Content-Security-Policy:
+      - frame-ancestors 'none', default-src 'none'
       Content-Type:
       - application/json
       Date:
-      - Wed, 14 Feb 2024 13:38:17 GMT
+      - Thu, 21 Mar 2024 14:00:31 GMT
+      Feature-Policy:
+      - '''none'''
       Keep-Alive:
       - timeout=60
+      Referrer-Policy:
+      - no-referrer
       Server:
       - unknown
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
       strict-transport-security:
       - max-age=157680000 ; includeSubDomains
     status:
