--- a/docker/docker-compose.open-zaak.yml
+++ b/docker/docker-compose.open-zaak.yml
@@ -38,6 +38,7 @@ services:
       - CELERY_BROKER_URL=redis://openzaak-redis:6379/1
       - CELERY_RESULT_BACKEND=redis://openzaak-redis:6379/1
       - NOTIFICATIONS_DISABLED=true
+      - JWT_EXPIRY=99999999999  # Roughly 3170 years. This is required for tests with time frozen to work
     ports:
       - 8003:8000
     volumes: &openzaak_web_volumes
