--- a/docker/docker-compose.open-zaak.yml
+++ b/docker/docker-compose.open-zaak.yml
@@ -39,6 +39,7 @@ services:
       - CELERY_RESULT_BACKEND=redis://openzaak-redis:6379/1
       - NOTIFICATIONS_DISABLED=true
       - JWT_EXPIRY=99999999999  # Roughly 3170 years. This is required for tests with time frozen to work
+      - CELERY_WORKER_CONCURRENCY=${CELERY_WORKER_CONCURRENCY:-2}
     ports:
       - 8003:8000
     volumes: &openzaak_web_volumes
