:construction_worker: Use docker compose V2 in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
 
       - name: Start CI docker services
         run: |
-          docker-compose -f docker-compose.ci.yml up -d
-          docker-compose -f docker-compose.camunda.yml up -d
+          docker compose -f docker-compose.ci.yml up -d
+          docker compose -f docker-compose.camunda.yml up -d
         working-directory: docker
 
       - name: Wait for Camunda to be up
@@ -145,8 +145,8 @@ jobs:
 
       - name: Start CI docker services
         run: |
-          docker-compose -f docker-compose.ci.yml up -d
-          docker-compose -f docker-compose.camunda.yml up -d
+          docker compose -f docker-compose.ci.yml up -d
+          docker compose -f docker-compose.camunda.yml up -d
         working-directory: docker
 
       - name: Wait for Camunda to be up
