:construction_worker: Let Github report flaky tests
Added an action that processes the flaky test log file, so that the
annotations can be logged in the Job summaries.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,10 @@ jobs:
           DB_PASSWORD: ''
           DEBUG: 'true'
 
+      - run: npm ci
+        working-directory: .github/actions/report-flaky
+      - uses: ./.github/actions/report-flaky
+
       - name: Run JS tests
         run: npm test
 
@@ -179,6 +183,10 @@ jobs:
           DB_USER: postgres
           DB_PASSWORD: ''
           DEBUG: 'true'
+
+      - run: npm ci
+        working-directory: .github/actions/report-flaky
+      - uses: ./.github/actions/report-flaky
 
   e2etests:
     runs-on: ubuntu-latest
