:construction_worker: Update codecov action to v4
Node 16 actions are deprecated.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,9 @@ jobs:
         run: npm test
 
       - name: Publish coverage report
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Generate OAS
         run: ./bin/generate_oas.sh openapi.yaml
