--- a/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KvKRemoteValidatorTestCase/KvKRemoteValidatorTestCase.test_rsin_validator.yaml
+++ b/src/openforms/contrib/kvk/tests/files/vcr_cassettes/KvKRemoteValidatorTestCase/KvKRemoteValidatorTestCase.test_rsin_validator.yaml
@@ -15,6 +15,61 @@ interactions:
       apikey:
       - l7xx1f2691f2520d487b902f4e0b57a0b197
     method: GET
+    uri: https://api.kvk.nl/test/api/v2/zoeken?rsin=992760562
+  response:
+    body:
+      string: '{"pagina":1,"resultatenPerPagina":10,"totaal":1,"resultaten":[{"kvkNummer":"90001354","rsin":"992760562","vestigingsnummer":"990000541921","naam":"Grand
+        Joyflex B.V.","adres":{"binnenlandsAdres":{"type":"postadres","plaats":"Sterksel"}},"type":"hoofdvestiging","_links":{"basisprofiel":{"href":"https://api.kvk.nl/test/api/v1/basisprofielen/90001354"},"vestigingsprofiel":{"href":"https://api.kvk.nl/test/api/v1/vestigingsprofielen/990000541921"}}}],"_links":{"self":{"href":"https://api.kvk.nl/test/api/v2/zoeken?rsin=992760562&pagina=1&resultatenperpagina=10"}}}'
+    headers:
+      API-Version:
+      - 2.0.0
+      Cache-Control:
+      - no-cache, no-store, max-age=0, must-revalidate
+      Connection:
+      - keep-alive
+      Content-Encoding:
+      - gzip
+      Content-Length:
+      - '300'
+      Content-Security-Policy:
+      - frame-ancestors 'none', default-src 'none'
+      Content-Type:
+      - application/hal+json
+      Date:
+      - Fri, 03 May 2024 08:31:09 GMT
+      Feature-Policy:
+      - '''none'''
+      Keep-Alive:
+      - timeout=60
+      Referrer-Policy:
+      - no-referrer
+      Server:
+      - unknown
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      strict-transport-security:
+      - max-age=157680000 ; includeSubDomains
+    status:
+      code: 200
+      message: ''
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/hal+json
+      Accept-Encoding:
+      - gzip, deflate, br
+      Connection:
+      - keep-alive
+      Content-Type:
+      - application/hal+json
+      User-Agent:
+      - python-requests/2.31.0
+      apikey:
+      - l7xx1f2691f2520d487b902f4e0b57a0b197
+    method: GET
     uri: https://api.kvk.nl/test/api/v2/zoeken?rsin=123456782
   response:
     body:
@@ -34,7 +89,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 21 Mar 2024 14:00:37 GMT
+      - Fri, 03 May 2024 08:31:09 GMT
       Feature-Policy:
       - '''none'''
       Keep-Alive:
