--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "design-token-editor": "^0.6.0",
+    "feelin": "^3.1.0",
     "flatpickr": "^4.6.9",
     "formik": "^2.2.9",
     "formiojs": "~4.13.0",
