--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@open-formulieren/formio-builder": "^0.19.1",
     "@open-formulieren/leaflet-tools": "^1.0.0",
     "@rjsf/core": "^4.2.1",
-    "@storybook/jest": "^0.2.3",
     "@tinymce/tinymce-react": "^4.3.2",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "babel-jest": "^29.3.1",
@@ -84,15 +83,16 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.13.13",
     "@formatjs/cli": "^6.1.1",
-    "@storybook/addon-actions": "^7.5.3",
-    "@storybook/addon-essentials": "^7.5.3",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/addon-links": "^7.5.3",
-    "@storybook/blocks": "^7.5.3",
+    "@storybook/addon-actions": "^8.1.5",
+    "@storybook/addon-essentials": "^8.1.5",
+    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-links": "^8.1.5",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/blocks": "^8.1.5",
     "@storybook/client-api": "^7.5.3",
-    "@storybook/react": "^7.5.3",
-    "@storybook/react-webpack5": "^7.5.3",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/react": "^8.1.5",
+    "@storybook/react-webpack5": "^8.1.5",
+    "@storybook/test": "^8.1.5",
     "@utrecht/components": "^1.0.0-alpha.378",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
@@ -114,7 +114,7 @@
     "sass": "^1.32.12",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.7",
-    "storybook": "^7.5.3",
+    "storybook": "^8.1.5",
     "storybook-react-intl": "^2.0.3",
     "style-loader": "^3.3.3",
     "typescript": "^4.3.5",
