--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "@storybook/addon-links": "^8.1.5",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/blocks": "^8.1.5",
-    "@storybook/client-api": "^7.5.3",
+    "@storybook/preview-api": "^8.1.5",
     "@storybook/react": "^8.1.5",
     "@storybook/react-webpack5": "^8.1.5",
     "@storybook/test": "^8.1.5",
