--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "msw-storybook-addon": "^1.10.0",
     "postcss": "^8.0.8",
     "postcss-loader": "^4.0.1",
-    "prettier": "2.6.2",
+    "prettier": "^3.3.0",
     "sass": "^1.32.12",
     "sass-loader": "^12.3.0",
     "semver": "^7.3.7",
@@ -125,5 +125,29 @@
   },
   "msw": {
     "workerDirectory": "public"
+  },
+  "prettier": {
+    "$schema": "http://json.schemastore.org/prettierrc",
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports"
+    ],
+    "arrowParens": "avoid",
+    "bracketSpacing": false,
+    "bracketSameLine": false,
+    "jsxSingleQuote": false,
+    "printWidth": 100,
+    "proseWrap": "always",
+    "quoteProps": "as-needed",
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "useTabs": false,
+    "importOrder": [
+      "^((api-mocks|components|data|formio|hooks|map|story-utils|types)/(.*)|(api|api-mocks|cache|Context|errors|headers|i18n|sdk|sentry|types|utils))$",
+      "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
   }
 }
