:hammer: [#4341] Add storybook test runner for local testing
We'll run the tests in Chromatic too, but not necessarily on
Github actions. This makes it possible to run the tests
locally in case there are failures on CI in the future.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "jest",
+    "test:storybook": "test-storybook",
     "build": "NODE_ENV=production webpack",
     "builddev": "NODE_ENV=development webpack",
     "watch": "webpack -w",
@@ -93,6 +94,7 @@
     "@storybook/react": "^8.1.5",
     "@storybook/react-webpack5": "^8.1.5",
     "@storybook/test": "^8.1.5",
+    "@storybook/test-runner": "^0.18.2",
     "@utrecht/components": "^1.0.0-alpha.378",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
