:art: Fix the import sorting of the utils package
The module utils.js was broken up into a package, and the
sorting rule was not updated accordingly.

--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "trailingComma": "es5",
     "useTabs": false,
     "importOrder": [
-      "^((api-mocks|components|data|formio|hooks|map|story-utils|types)/(.*)|(api|api-mocks|cache|Context|errors|headers|i18n|sdk|sentry|types|utils))$",
+      "^((api-mocks|components|data|formio|hooks|map|story-utils|types|utils)/(.*)|(api|api-mocks|cache|Context|errors|headers|i18n|sdk|sentry|types))$",
       "^[./]"
     ],
     "importOrderSeparation": true,
