:heavy_plus_sign: [#4346] Set up django-flags to manage feature flags
Added initial configuration for existing feature flags, which are
currently defined on the GlobalConfiguration model.

--- a/requirements/base.in
+++ b/requirements/base.in
@@ -47,6 +47,7 @@ django-colorfield
 django-cookie-consent
 django-cors-headers
 django-digid-eherkenning
+django-flags
 django-hijack
 django-import-export
 django-jsonform
